# video-stream-service

./: LICENSE
grayscale_service/: CMakeLists.txt  Dockerfile  blur_faces.sh  convert_video.sh  server.cpp
grayscale_service/k8s/: deployment.yaml
